test/sema/typeck/expr/path/const-with-type-params.dora
const X: Int32 = 1; fn f() { X[Int32]; }

//====================
// error: no type params allowed
// --> const-with-type-params.dora:1:30
//  | const X: Int32 = 1; fn f() { X[Int32]; }
//                                 ~~~~~~~~
//  | 
// 1 error found.
